{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 134,
  "lineage": "72e6ee5d-4a93-b45f-5485-74d064e6f20c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.188.98.112",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-09-13T03:52:02.416-07:00",
            "id": "script-project-249010/us-central1/ipaddress",
            "name": "ipaddress",
            "network_tier": "PREMIUM",
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/addresses/ipaddress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22",
                  "3306"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-09-13T03:52:28.634-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "dev-ingress-firewall",
            "name": "dev-ingress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/dev-vpc",
            "priority": 1000,
            "project": "script-project-249010",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/firewalls/dev-ingress-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22",
                  "3306"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-09-13T03:52:28.727-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "id": "dev-egress-firewall",
            "name": "dev-egress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/dev-vpc",
            "priority": 1000,
            "project": "script-project-249010",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/firewalls/dev-egress-firewall",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.93.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2019-09-13T03:52:28.682-07:00",
            "id": "private-ip-alloc",
            "name": "private-ip-alloc",
            "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/dev-vpc",
            "prefix_length": 16,
            "project": "script-project-249010",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/addresses/private-ip-alloc"
          },
          "depends_on": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190905",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/script-project-249010/zones/us-central1-a/disks/wp1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "wp1",
            "instance_id": "3708831358980114441",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "ON7cWxpV3Sc=",
            "metadata_startup_script": "sudo  echo \"root:root123\" | chpasswd; sudo  mv /etc/ssh/sshd_config  /opt; sudo touch /etc/ssh/sshd_config; sudo echo -e \"Port 22\nHostKey /etc/ssh/ssh_host_rsa_key\nPermitRootLogin yes\nPubkeyAuthentication yes\nPasswordAuthentication yes\nUsePAM yes\" \u003e  /etc/ssh/sshd_config; sudo systemctl restart sshd; sudo apt install git  -y; git clone https://github.com/iamdaaniyaal/GCP.git; cd GCP/Terraform; sudo chmod 777 script.sh; ./script.sh",
            "name": "wp1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.188.98.112",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/dev-vpc",
                "network_ip": "10.10.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/subnetworks/dev-subnet",
                "subnetwork_project": "script-project-249010"
              }
            ],
            "project": "script-project-249010",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/zones/us-central1-a/instances/wp1",
            "tags": [
              "bar",
              "foo"
            ],
            "tags_fingerprint": "1gqCRgrww4E=",
            "zone": "us-central1-a"
          },
          "depends_on": [
            "data.template_file.phpconfig",
            "google_compute_address.static",
            "google_compute_network.vpc1",
            "google_compute_subnetwork.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "dev-vpc",
            "name": "dev-vpc",
            "project": "script-project-249010",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/dev-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-09-13T03:52:28.798-07:00",
            "enable_flow_logs": false,
            "fingerprint": "dUuDUhR6Mqw=",
            "gateway_address": "10.10.0.1",
            "id": "us-central1/dev-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "dev-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/script-project-249010/global/networks/dev-vpc",
            "private_ip_google_access": false,
            "project": "script-project-249010",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/script-project-249010/regions/us-central1/subnetworks/dev-subnet"
          },
          "depends_on": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    }
  ]
}